# axum-casbin-admin

./: .gitignore  .typos.toml  Cargo.toml  Dockerfile  README.md  Todo.md
.cargo/: Config.toml
config/: application.yaml  auth_model.conf  errors.json  log4rs.yaml  policy.csv
docs/sql/: casbin_rule.sql  sys_menu.sql  sys_role.sql  sys_role_menu.sql  sys_trash.sql  sys_user.sql  sys_user_role.sql
httpClient/: axum-admin.json  http-client.env.json  menu.http  role.http  user.http
src/: error.rs  main.rs
src/common/: mod.rs  page.rs  response.rs
src/config/: logger.rs  mod.rs
src/handler/: apidoc.rs  menu_handler.rs  mod.rs  role_handler.rs  root.rs  sys_menu_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs  context.rs  limit.rs  logger.rs  mod.rs
src/model/: menu.rs  mod.rs  role.rs  sys_menu.rs  sys_role_menu.rs  sys_trash.rs  sys_user.rs  sys_user_role.rs  user.rs  user_role.rs
src/service/: casbin_service.rs  login_service.rs  menu_service.rs  mod.rs  role_service.rs  sys_menu_service.rs  sys_role_service.rs  sys_trash_service.rs  sys_user_service.rs  user_service.rs
src/utils/: cache_util.rs  casbin.rs  db.rs  empty.rs  json.rs  jwt_util.rs  macros.rs  mod.rs  password.rs  redis.rs  time.rs
src/utils/cache/: cache_mem_service.rs  cache_redis_service.rs  cache_service.rs  mod.rs
src/vo/: menu_vo.rs  mod.rs  role_vo.rs  sys_menu_vo.rs  sys_role_vo.rs  sys_user_vo.rs  user_vo.rs
static/: asset-manifest.json  index.html
static/static/css/: main.ba5f1a95.css  main.ba5f1a95.css.map  main.c89db586.css  (+1 more)
(+6 files in other folders)
