[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={ version = "0.7" }
tokio ={ version = "1",features = ["full"]}
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors","trace","fs"] }

serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
serde_yaml = "0.9"
sonic-rs = "0.3" #json

rbs = { version = "4.5"}
rbatis = { version = "4.5"} #"debug_mode"]
rbdc-mysql={version="4.5"}

log4rs = "1.3"
tracing = "0.1"

jsonwebtoken = "9.3"

# redis = "0.25"
bb8-redis = "0.15"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"

bcrypt = "0.15"
md5="0.7"

# sqlparser = "0.47"
parking_lot = "0.12"
rayon = "1.10"
dashmap = {version = "6.0", features = ["rayon"]}
async-trait = "0.1"
once_cell = "1.19"
# lazy_static = "1"

# cached = {version = "0.51", features = ["async"]}
mini-moka = "0.10"

http-body-util = "0.1"
bytes = "1.6"
mime = "0.3"
axum-serde = "0.5"



[target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"

[dev-dependencies]
axum-test = "15.2.0"
